--- a/residentesdm/templates/registration/login.html
+++ b/residentesdm/templates/registration/login.html
@@ -11,7 +11,7 @@
             <div class="alert alert-success">
                 <ul class="mb-0">
                     {% for message in messages %}
-                    <li>{{ message }}</li>
+                    <li style="text-align: center; font-size: 0.8em;">{{ message }}</li>
                     {% endfor %}
                 </ul>
             </div>
